banner z-index fix

--- a/_sass/_homePage.scss
+++ b/_sass/_homePage.scss
@@ -92,6 +92,7 @@ Purple: Plum: #540A97
 #nav li ul { 
 	position: absolute;  
 	display: none;
+  z-index: 2;
 } 
 #nav li:hover ul { 
 	display: block; 
@@ -99,6 +100,7 @@ Purple: Plum: #540A97
 #nav li ul li { 
 	float: none; 
 	display: inline;
+  z-index: 2;
 }
 #nav li ul li a { 
 	width: auto;
@@ -152,7 +154,7 @@ Purple: Plum: #540A97
   margin-top: -14px;
   margin-left: -7px;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 //Header Styles
